# bsw_test_task

./: .windsurfrules  README.md  docker-compose.yaml  pyproject.toml
bet_maker/: .env.example  Dockerfile  README.md  conftest.py  entrypoint.sh  main.py  pyproject.toml
bet_maker/alembic/: env.py
bet_maker/alembic/versions/: 5dbb1b482dee_change_event_id_to_integer_and_add_index.py  c2dbf0911141_create_bet_table.py
bet_maker/src/: config.py  database.py  dependecies.py  models.py  routes.py  schemas.py  services.py
bet_maker/src/application/service/: __init__.py  bet_service.py  event_service.py
bet_maker/src/config/: __init__.py  config.py
bet_maker/src/di/: container.py
bet_maker/src/domain/: exceptions.py
bet_maker/src/domain/entity/: __init__.py  bet.py  event.py
bet_maker/src/domain/repository/: __init__.py  base_bet_repository.py  base_event_repository.py
bet_maker/src/exception/: __init__.py  base_bet_maker_error.py  event_by_id_not_found.py  event_repository_connection_error.py  remote_service_unavailable.py  repository_errors.py
bet_maker/src/infra/: __init__.py
bet_maker/test/: README.md  conftest.py
frontend/: README.md  main.py  pyproject.toml  requirements.txt
frontend/src/: routes.py
frontend/template/: base.html  events.html  index.html
line_provider/: Dockerfile  README.md  conftest.py  main.py  pyproject.toml
line_provider/src/: routes.py  schemas.py  storage.py
line_provider/src/di/: container.py
line_provider/src/exception/: __init__.py  exceptions.py
line_provider/test/: README.md  app_tests.py  test_schema.py
(+46 files in other folders)
